<resources>
    <string name="app_name">Renter</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_description">Log in on the app with Google services</string>
    <string name="insta_logo" translatable="false">insta_logo</string>
    <string name="github_logo" translatable="false">github_logo</string>
    <string name="twitter_logo" translatable="false">twitter_logo</string>
    <string name="google_logo" translatable="false">google_logo</string>
    <string name="req_id_token" translatable="false">"502767780275-u1rjp206j9g5000rigg2nu9rf4s90pj8.apps.googleusercontent.com"</string>
    <string name="prefs_file" translatable="false">com.icoelloc.renter.PREFERENCE_FILE_KEY</string>
    <string name="visit_us">Visit us on the following social networks</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="my_properties">My Properties</string>
    <string name="my_home">My home</string>
    <string name="owned">Owned</string>
    <string name="available">Available</string>
    <string name="close_to_me">Close to me</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="my_account">My account</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="main_activity" translatable="false">main_activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="foto_perfil" translatable="false">foto_perfil</string>
    <string name="gallery_button" translatable="false">Gallery Button</string>
    <string name="sample_text" translatable="false">sample_text</string>
    <string name="btn_save" translatable="false">btn save</string>
    <string name="availables">availables</string>
    <string name="rented">rented</string>
    <string name="bedrooms">bedroom/s</string>
    <string name="bathrooms">bathroom/s</string>
    <string name="email">Email</string>
    <string name="renter_description">The new way to find your new home</string>
    <string name="appname" translatable="false">Renter</string>
    <string name="login">Login</string>
    <string name="dont_have_account">If you don\'t have an account</string>
    <string name="have_account">If you have an account</string>
    <string name="sign_up_here">\ sign up here</string>
    <string name="sign_in_here">\ sign in here</string>
    <string name="no_net" translatable="false">Error, sin conexion a internet</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="userNotCorrect" translatable="false">Invalid user</string>
    <string name="profile_image" translatable="false">profile_image</string>
    <string name="temp_name" translatable="false">temp_name</string>
    <string name="temp_street" translatable="false">temp_street</string>
    <string name="comma" translatable="false">,</string>
    <string name="number" translatable="false">temp_number</string>
    <string name="temp_city" translatable="false">temp_city</string>
    <string name="contact_temp" translatable="false">contact_temp</string>
    <string name="prize_Temp" translatable="false">prize_temp</string>
    <string name="need_gallery" translatable="false">no gallery</string>
    <string name="need_camera" translatable="false">need camera</string>
    <string name="properties_derails">Property Detail</string>
    <string name="nombre">Property Name</string>
    <string name="contacto">Contact Phone</string>
    <string name="superficie">Area m2</string>
    <string name="buttoncamera" translatable="false">buttonCamera</string>
    <string name="precio">€/month</string>
    <string name="habitaciones">Bedrooms</string>
    <string name="banios">Bathrooms</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="renter" translatable="false">Renter</string>
    <string name="owner" translatable="false">owner_mail</string>
    <string name="accept">accept</string>
    <string name="cancel">cancel</string>
    <string name="addhome" translatable="false">addHome</string>
    <string name="min_banios">Min. Bathrooms</string>
    <string name="min_habitaciones">Min. Bedrooms</string>
    <string name="min_superficie">Min. m2</string>
    <string name="max_precio">max €/month</string>
    <string name="temp_phone" translatable="false">temp_phone</string>
    <string name="view_all">View all</string>
    <string name="phone">Phone:</string>
    <string name="localidad">City</string>
    <string name="temp_disponibility" translatable="false">temp_disponibility</string>
    <string name="fill_all_fields">\"Please fill all fields\"</string>
    <string name="enter_valid_mail">\"Please enter a valid email\"</string>
    <string name="enter_valid_password">\"Please enter a valid password\"</string>
    <string name="isAlreadyExist">User already exits</string>
</resources>