<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.Renter"
    tools:context=".login.LoginActivity"
    app:flow_verticalAlign="center">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/google"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="63dp"
        android:contentDescription="@string/google_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="45sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/twDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_description"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="16sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_login_googleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="150dp"
        android:backgroundTint="#57A0F6"
        android:drawableLeft="@drawable/googleg_standard_color_18"
        android:drawablePadding="0dp"
        android:text="@string/sign_in_google"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,TextContrastCheck" />


    <TextView
        android:id="@+id/meet_us_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit_us"
        android:layout_marginTop="80dp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="16sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" android:layout_marginHorizontal="70dp">

        <ImageView
            android:id="@+id/login_img_twitter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/twitter_logo"
            app:srcCompat="@drawable/twitter"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/login_img_github"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/github"
            android:contentDescription="@string/github_logo"/>

        <ImageView
            android:id="@+id/login_img_instagram"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/instagram"
            android:contentDescription="@string/insta_logo" />
    </LinearLayout>






</LinearLayout>